most-of-the-labs/finished/DevOps-Materials/K8s/11 - Security Fundamentals/12Hands-On - Allow Traffic Between Specific Pods/policies/allow-curl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-curl
spec:
  podSelector:
    matchLabels:
      app: color-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: curl











    # - podSelector:
    #     matchLabels:
    #       app: curl
    # - podSelector:
    #     matchLabels:
    #       app: traffic-generator
#     - podSelector:
#         matchLabels:
#           app: curl
#           tier: backend
# # pod1:
#   app: curl
#   tier: frontend
# pod2:
#   app: traffic-generator
#   tier: backend
# pod3:
#   app: curl
#   tier: backend
